--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,102 @@
+body{
+    background-color: #EFEFEF;
+    margin: 0;
+}
+.component{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 20px;
+}
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 10px;
+}
+.header{
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    color: white;
+    margin: 0;
+    
+}
+.right-column{
+    flex: 1;
+    background-color: white;
+}
+.left-column{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 
+}
+.formPersonal{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+button{
+    flex: 1;
+}
+.component form div{
+    display: flex;
+    flex-direction: column;
+    
+
+}
+.component form #buttons{
+    display: flex;
+    flex-direction: row;
+    gap: 7px;
+    
+    
+}
+.CVheader{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: black;
+    color: white;
+    margin-top: 5px;
+}
+.CVheader div{
+    display: flex;
+    gap: 15px;
+}
+h2{
+    border-bottom: 2px solid #000;
+    background-color: #e6f7ff;
+}
+.aboutCon{
+    padding: 20px;
+}
+.eduDates{
+    display: flex;
+}
+.edu{
+    display: flex;
+    gap: 20px;
+}
+.edu1{
+    flex: 0.7
+}
+.edu2{
+    flex: 1.3;
+}
+.exp{
+    display: flex;
+    gap: 20px;
+}
+.exp1{
+    flex: 0.7;
+}
+.exp2{
+    flex: 1.3;
+}
+.bold{
+    font-weight: 800;
+}
