--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,11 @@ body{
     
 }
 .right-column{
-    flex: 1;
+    flex: 1 ;
+    display: flex;
+    flex-direction: column;
     background-color: white;
+    
 }
 .left-column{
     flex: 1;
@@ -71,21 +74,33 @@ h2{
     border-bottom: 2px solid #000;
     background-color: #e6f7ff;
 }
+.headedu , .headexp{
+    margin: 20px;
+}
 .aboutCon{
     padding: 20px;
+    
 }
 .educon, .expcon{
     padding-left: 20px;
     padding-right: 20px;
+    border: 2px solid black;
+    margin: 20px;
+    padding: 10px;
 }
+
 .eduDates{
     display: flex;
+    flex-direction: column;
+
 }
 .edu{
     display: flex;
     gap: 20px;
 }
 .edu1{
+    display: flex;
+    flex-direction: column;
     flex: 0.7
 }
 .edu2{
@@ -103,4 +118,25 @@ h2{
 }
 .bold{
     font-weight: 800;
+}
+
+.expcon, p{
+    
+    white-space: normal;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
+.edusch{
+    display: flex;
+    border: 2px solid black;
+    justify-content: space-between;
+    padding: 10px;
+    margin: 5px;
+}
+.edusch .schName{
+    
+}
+.edusch .buttons {
+    display: flex;
+    gap: 5px;
 }
